styling overflow solved

--- a/src/styles/Resume.css
+++ b/src/styles/Resume.css
@@ -727,7 +727,7 @@ table {
 }
 .c45{
   /* border: 1px solid green; */
-  width: 250px !important ;
+  width: 95px !important ;
 }
 .c41>div{
   margin-left:2%;
@@ -763,7 +763,7 @@ li{
 }
 
 .c23{
-  border:1px solid red;
-  /* width:0px !important; */
+  /* border:1px solid red; */
+  width:95px !important;
 }
 
